--- a/style/_mixin.scss
+++ b/style/_mixin.scss
@@ -34,11 +34,22 @@
 }
 
 @mixin breakpoint($point) {
-  @if $point == small {
-    @media (max-width: 500px) {@content;}
+  @if $point==small {
+    @media (max-width: 500px) {
+      @content;
+    }
   }
 
-  @if $point == tablet {
-    @media (max-width: 768px) {@content;}
+  @if $point==tablet {
+    @media (max-width: 768px) {
+      @content;
+    }
   }
+}
+
+@mixin fontawesome {
+  font-family: FontAwesome;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
