--- a/style/lienhe.css
+++ b/style/lienhe.css
@@ -1,6 +1,3 @@
-/*------------------------
-BASE
---------------------------*/
 /* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.26, autoprefixer: v9.7.3) */
 @font-face {
   font-family: 'Source Sans';
@@ -445,113 +442,6 @@ RESPONSIVE
 }
 
 /* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.26, autoprefixer: v9.7.3) */
-.img-bg {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1fr 1fr 1fr;
-      grid-template-columns: 1fr 1fr 1fr;
-  -ms-grid-rows: 1fr 1fr;
-      grid-template-rows: 1fr 1fr;
-  gap: 10px;
-      grid-template-areas: "div1 div1 div2" "div3 div4 div5";
-  overflow: hidden;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  padding: 1rem 0;
-}
-
-.img-bg > div {
-  width: 100%;
-  overflow: hidden;
-}
-
-.img-bg a {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-      justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-      align-items: center;
-  width: 100%;
-  height: 100%;
-  letter-spacing: 3px;
-  font-size: 1.5rem;
-  font-family: "Source Sans", Cambria;
-  color: #ffffff;
-  background-color: #333333c4;
-  opacity: 0;
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-}
-
-.img-bg a:hover {
-  opacity: 1;
-  letter-spacing: 1px;
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-}
-
-@media (max-width: 768px) {
-  .img-bg a {
-    opacity: 1;
-    font-size: 1rem;
-  }
-}
-
-@media (max-width: 768px) {
-  .img-bg {
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
-    -ms-grid-rows: (150px)[5];
-        grid-template-rows: repeat(5, 150px);
-    gap: 10px;
-        grid-template-areas: "div1" " div2" " div3" " div4" "div5";
-  }
-}
-
-.div1 {
-  -ms-grid-row: 1;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
-  grid-area: div1;
-  background: url(../res/img/cuusv.jpeg) no-repeat center/cover;
-}
-
-.div2 {
-  -ms-grid-row: 1;
-  -ms-grid-column: 3;
-  grid-area: div2;
-  background: url(../res/img/nghiencuu.jpg) no-repeat center/cover;
-}
-
-.div3 {
-  -ms-grid-row: 2;
-  -ms-grid-column: 1;
-  grid-area: div3;
-  background: url(../res/img/hoatdong.jpg) no-repeat center/cover;
-}
-
-.div4 {
-  -ms-grid-row: 2;
-  -ms-grid-column: 2;
-  grid-area: div4;
-  background: url(../res/img/hocbong.png) no-repeat center/cover;
-}
-
-.div5 {
-  -ms-grid-row: 2;
-  -ms-grid-column: 3;
-  grid-area: div5;
-  background: url(../res/img/thongbao.jpg) no-repeat center/cover;
-}
-
-/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.26, autoprefixer: v9.7.3) */
 /*------------------------
 FOOTER
 --------------------------*/
@@ -618,7 +508,7 @@ FOOTER
 
 #col1 {
   -ms-grid-row: 1;
-  -ms-grid-column: 1;
+  -ms-grid-column: 2;
   grid-area: col1;
 }
 
@@ -716,198 +606,170 @@ RESPONSIVE
   }
 }
 
-/*------------------------
-MAIN
---------------------------*/
-#main {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+#header {
+  background: transparent;
+  height: auto;
+  border-bottom: 2px solid #f0da0e;
 }
 
-.main-section {
+.banner {
   width: 100%;
-  height: 400px;
-  text-align: center;
+  max-width: 100%;
+  height: auto;
 }
 
-.main-section.light, .main-section.dark {
-  color: #333;
-}
-
-.main-section.light > a, .main-section.dark > a {
-  font-size: 2.5em;
-  color: #333;
-}
-
-.main-section.light > a:hover, .main-section.dark > a:hover {
-  color: #af223c;
-}
-
-@media (max-width: 500px) {
-  .main-section.light > a, .main-section.dark > a {
-    font-size: 1.8em;
-  }
-}
-
-.main-section.dark {
-  color: #ffffff;
-  background-color: #333;
-}
-
-.main-section.dark > a {
-  color: #ffffff;
-}
-
-.main-section.dark > a:hover {
-  color: #af223c;
-}
-
-.main-section > .wrap {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: space-around;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: row;
-      flex-direction: row;
-}
-
-.main-section > .wrap > .news-group {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: space-around;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: row;
-      flex-direction: row;
-  width: 100%;
-}
-
-@media (max-width: 500px) {
-  .main-section > .wrap > .news-group {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: space-around;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-        flex-direction: column;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-        align-items: center;
-  }
-}
-
-@media (max-width: 768px) {
-  .main-section > .wrap {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-  }
-}
-
-.main-section .news-item {
-  width: 40%;
-  height: 100%;
-  text-align: justify;
-}
-
-.main-section .news-item img {
-  width: 100%;
+.banner img {
+  display: block;
+  margin: 0 auto;
   -o-object-fit: cover;
      object-fit: cover;
-  height: 200px;
-  -webkit-box-shadow: 0 0 2px 0 #333333c4;
-          box-shadow: 0 0 2px 0 #333333c4;
 }
 
-@media (max-width: 768px) {
-  .main-section .news-item img {
-    height: 130px;
-  }
+.main {
+  margin: 2rem auto;
 }
 
-@media (max-width: 500px) {
-  .main-section .news-item {
-    width: 90%;
-    text-align: center;
-  }
-  .main-section .news-item img {
-    height: 300px;
-  }
+.main h1, .main h3, .main h5 {
+  text-align: center;
+  margin: 1rem;
 }
 
-@media (max-width: 768px) {
-  .main-section {
-    height: auto;
-  }
-}
-
-.slide {
-  margin-top: 4.5rem;
-}
-
-.slide .nganh {
+.contact-content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-      justify-content: center;
+  -webkit-box-pack: space-between;
+  -ms-flex-pack: justify;
+      justify-content: space-between;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-      flex-direction: column;
+  -ms-flex-direction: row;
+      flex-direction: row;
   -webkit-box-align: center;
   -ms-flex-align: center;
       align-items: center;
 }
 
-.slide img {
-  width: 5rem;
+@media (max-width: 768px) {
+  .contact-content {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+        justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+        flex-direction: column;
+  }
+}
+
+.contact-form > table {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.contact-form > table label {
+  margin: 10px;
+}
+
+.contact-form input, .contact-form textarea {
+  width: 200px;
+  border: 0;
+  -webkit-box-shadow: 0 0 1px 0 #333333c4;
+          box-shadow: 0 0 1px 0 #333333c4;
+}
+
+.contact-form #submit {
+  display: block;
+  margin: 1em auto;
+  padding: 10px;
+  background-color: #af223c;
+  color: #f0da0e;
+  width: 50%;
+}
+
+.contact-form #submit:hover {
+  background-color: #333;
+}
+
+#side-nav {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+}
+
+#side-nav a {
+  display: block;
+  padding: 10px 15px;
+  color: yellow;
+  background-color: #af223c;
+  -webkit-box-shadow: 0 0 4px 0 #851328fb;
+          box-shadow: 0 0 4px 0 #851328fb;
+}
+
+#side-nav a:hover {
+  background-color: #333;
 }
 
 @media (max-width: 768px) {
-  .slide img {
-    width: 3.5rem;
-  }
-}
-
-@media (max-width: 500px) {
-  .slide img {
-    width: 2rem;
-  }
-}
-
-.slide span {
-  font-size: 1.2rem;
-  color: #ffffff;
-}
-
-@media (max-width: 768px) {
-  .slide span {
-    font-size: 1rem;
-  }
-}
-
-@media (max-width: 500px) {
-  .slide span {
-    font-size: .7rem;
-  }
-}
-
-@media (max-width: 768px) {
-  .slide {
+  #side-nav {
+    width: 90%;
     margin-top: 1rem;
-    padding: 2rem 0;
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
   }
 }
-/*# sourceMappingURL=style.css.map */
+
+#contact {
+  -webkit-box-flex: 6;
+      -ms-flex-positive: 6;
+          flex-grow: 6;
+}
+
+@media (max-width: 768px) {
+  #contact {
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+  }
+}
+
+.footer-content {
+      grid-template-areas: ". col1 logo col3 .";
+}
+
+@media (max-width: 768px) {
+  .wrap {
+    max-width: 100%;
+  }
+  /* footer ===================== */
+  .footer-content {
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    -ms-grid-columns: (1fr)[2] !important;
+        grid-template-columns: repeat(2, 1fr) !important;
+    -ms-grid-rows: 1.5fr 1fr;
+        grid-template-rows: 1.5fr 1fr;
+        grid-template-areas: "logo logo" "col1 col3";
+  }
+  .col-left,
+  .col-right {
+    padding-bottom: 0;
+    max-width: 180px;
+  }
+  #footer-logo {
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    width: 145px;
+  }
+  #footer-logo > img {
+    width: 100%;
+  }
+}
+/*# sourceMappingURL=lienhe.css.map */
