--- a/style/style.scss
+++ b/style/style.scss
@@ -3,64 +3,12 @@ BASE
 --------------------------*/
 @import "valuable";
 @import "mixin";
+@import "config";
 @import "header";
 @import "img-bg";
 @import "footer";
 
 
-html {
-  scroll-behavior: smooth;
-}
-
-body {
-  font-family: 'Source Sans', Cambria, Arial;
-  background-color: $white-color;
-  overflow-x: hidden;
-  font-size: 15px;
-  line-height: 1.5;
-
-  &::-webkit-scrollbar-thumb {
-    @include gradient;
-  }
-
-  &::-webkit-scrollbar,
-  &::-webkit-scrollbar-track {
-    background-color: $white-color;
-  }
-
-  &::-webkit-scrollbar {
-    width: 10px;
-  }
-}
-
-ul {
-  margin-bottom: 0;
-}
-
-p {
-  padding: 1rem 0 0 0;
-}
-
-a:hover {
-  text-decoration: none;
-}
-
-input {
-  border: 0;
-
-  &:focus {
-    outline: 0;
-  }
-}
-
-.wrap {
-  max-width: 1200px;
-  margin: 0 auto;
-
-  @include breakpoint(tablet) {
-    max-width: 100%;
-  }
-}
 
 /*------------------------
 MAIN
