--- a/style/lienhe.css
+++ b/style/lienhe.css
@@ -57,7 +57,6 @@
   padding: 100px;
   border-radius: 100%;
   color: #ffffff;
-  content: "loading";
   border-top: 16px solid #ffffff;
   border-right: 16px solid #333;
   border-bottom: 16px solid #f0da0e;
@@ -104,6 +103,10 @@ ul {
 
 p {
   padding: 1rem 0 0 0;
+}
+
+h4 {
+  margin-bottom: 2rem;
 }
 
 a:hover {
