--- a/style/style.css
+++ b/style/style.css
@@ -60,7 +60,6 @@ BASE
   padding: 100px;
   border-radius: 100%;
   color: #ffffff;
-  content: "loading";
   border-top: 16px solid #ffffff;
   border-right: 16px solid #333;
   border-bottom: 16px solid #f0da0e;
@@ -107,6 +106,10 @@ ul {
 
 p {
   padding: 1rem 0 0 0;
+}
+
+h4 {
+  margin-bottom: 2rem;
 }
 
 a:hover {
@@ -458,6 +461,7 @@ RESPONSIVE
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  height: 600px;
   padding: 1rem 0;
 }
 
@@ -719,23 +723,19 @@ RESPONSIVE
 /*------------------------
 MAIN
 --------------------------*/
-#main {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
 .main-section {
   width: 100%;
-  height: 400px;
   text-align: center;
 }
 
 .main-section.light, .main-section.dark {
   color: #333;
+  padding: 4rem 0;
 }
 
 .main-section.light > a, .main-section.dark > a {
   font-size: 2.5em;
+  text-align: center;
   color: #333;
 }
 
@@ -773,6 +773,7 @@ MAIN
   -webkit-box-direction: normal;
   -ms-flex-direction: row;
       flex-direction: row;
+  margin-top: 1rem;
 }
 
 .main-section > .wrap > .news-group {
@@ -852,7 +853,8 @@ MAIN
 }
 
 .slide {
-  margin-top: 4.5rem;
+  margin-top: 3rem;
+  padding-bottom: 3rem;
 }
 
 .slide .nganh {
@@ -908,6 +910,87 @@ MAIN
   .slide {
     margin-top: 1rem;
     padding: 2rem 0;
+  }
+}
+
+.why-choose {
+  background: url(../res/img/why.jpg) no-repeat center/cover fixed;
+  z-index: 0;
+}
+
+.why-choose.light {
+  color: #ffffff;
+  background-color: #333;
+}
+
+.why-choose.light > a {
+  color: #ffffff;
+}
+
+.why-choose.light > a:hover {
+  color: #af223c;
+}
+
+.why-choose .faded {
+  width: 100%;
+  height: 100%;
+  display: block;
+  background-color: #333333c4;
+  z-index: 1;
+  padding: 1rem;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+
+.why-choose .faded:hover {
+  background-color: #333;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+
+.why-choose table {
+  width: 100%;
+  margin: 5rem 0;
+}
+
+.why-choose table td {
+  width: 25%;
+}
+
+.why-choose h2 {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.why-choose span {
+  font-size: 1.2rem;
+  color: #f0da0e;
+}
+
+@media (max-width: 768px) {
+  .why-choose span {
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 500px) {
+  .why-choose span {
+    font-size: .7rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .why-choose {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+        justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+        flex-direction: column;
   }
 }
 /*# sourceMappingURL=style.css.map */
