--- a/style/style.scss
+++ b/style/style.scss
@@ -13,22 +13,20 @@ BASE
 /*------------------------
 MAIN
 --------------------------*/
-#main {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
+
 
 .main-section {
   width: 100%;
-  height: 400px;
   text-align: center;
 
   &.light,
   &.dark {
     color: $black-color;
+    padding: 4rem 0;
 
     &>a {
       font-size: 2.5em;
+      text-align: center;
       color: $black-color;
 
       &:hover {
@@ -56,6 +54,7 @@ MAIN
 
   &>.wrap {
     @include flex(row, null, space-around);
+    margin-top: 1rem;
 
     &>.news-group {
       @include flex(row, null, space-around);
@@ -103,7 +102,8 @@ MAIN
 }
 
 .slide {
-  margin-top: 4.5rem;
+  margin-top: 3rem;
+  padding-bottom: 3rem;
 
   .nganh {
     @include flex(column, center, center);
@@ -137,5 +137,68 @@ MAIN
   @include breakpoint(tablet) {
     margin-top: 1rem;
     padding: 2rem 0;
+  }
+}
+
+.why-choose {
+  background: url(../res/img/why.jpg) no-repeat center/ cover fixed;
+  z-index: 0;
+  &.light {
+    color: $white-color; 
+    background-color: $black-color;
+
+    &>a {
+      color: $white-color;
+
+      &:hover {
+        color: $red-color;
+      }
+    }
+  }
+
+  .faded {
+    width: 100%;
+    height: 100%;
+    display: block;
+    background-color: $black-color-blur;
+    z-index: 1;
+    padding: 1rem;
+    @include trans(.2s);
+
+    &:hover {
+      background-color: $black-color;
+      @include trans(.2s);
+    }
+  }
+
+  table {
+    width: 100%;
+    margin: 5rem 0;
+
+    td {
+      width: 25%;
+    }
+  }
+
+  h2 {
+    font-size: 1.5rem;
+    font-weight: bold;
+  }
+
+  & span {
+    font-size: 1.2rem;
+    color: $yellow-color;
+
+    @include breakpoint(tablet) {
+      font-size: 1rem;
+    }
+
+    @include breakpoint(small) {
+      font-size: .7rem;
+    }
+  }
+
+  @include breakpoint(tablet) {
+    @include flex(column, null, center);
   }
 }
